--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Carta Presentación</td>
           <td>
-            <a href="assets/files/Carta Nº 025-2023-RSU-UA .docx.pdf" download="Carta Nº 025-2023-RSU-UA .docx.pdf" class="button" target="_blank">Descargar<i
+            <a href="assets/files/Carta-N-025-2023-RSU-UA.pdf" download="Carta-N-025-2023-RSU-UA.pdf" class="button" target="_blank">Descargar<i
                 class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Documento Final</td>
           <td>
-            <a href="assets/files/INFORME-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINA.pdf" downloads="INFORME-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
+            <a href="assets/files/INFORME-MEJORA(SUMIDEROSZ&G)-FINAL.pdff" downloads="INFORME-MEJORA(SUMIDEROSZ&G)-FINAL.pdf" class="button"
               target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
@@ -431,14 +431,14 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Presentación Final
           </td>
           <td>
-            <a href="assets/files/PRESENTACIÓN-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL.pdf" download="PRESENTACIÓN-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
+            <a href="assets/files/PRESENTACIÓN-(SUMIDEROSZ&G)-FINAL.pptx" download="PRESENTACIÓN-(SUMIDEROSZ&G)-FINAL.pptx" class="button"
               target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
         <tr>
-          <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Organigrama</td>
+          <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Diagrama Gannt</td>
           <td>
-            <a href="assets/files/#" download="Ejemplo_Artículo_Matrícula" class="button" target="_blank">Descargar<i
+            <a href="assets/files/gantt-sumifinal.pdf" download="gantt-sumifinal.pdf" class="button" target="_blank">Descargar<i
                 class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
