--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Documento Final</td>
           <td>
-            <a href="assets/files/INFORME-MEJORA(SUMIDEROSZ&G)-FINAL.pdff" downloads="INFORME-MEJORA(SUMIDEROSZ&G)-FINAL.pdf" class="button"
+            <a href="assets/files/INFORME-MEJORA(SUMIDEROSZ&G)-FINAL.pdf" downloads="INFORME-MEJORA(SUMIDEROSZ&G)-FINAL.pdf" class="button"
               target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
