--- a/index.html
+++ b/index.html
@@ -464,7 +464,11 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
           <img class="footer__image" src="assets/img/" />
         </a>
       </div>
-	    
+	     <div class="footer__item">
+        <a>
+          <img class="footer__image" src="assets/img/" />
+        </a>
+      </div>
         </div>
   </footer>
 
