--- a/index.html
+++ b/index.html
@@ -464,13 +464,17 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
           <img class="footer__image" src="assets/img/" />
         </a>
       </div>
-	     <div class="footer__item">
+	<div class="footer__item">
         <a>
-          <img class="footer__image" src="assets/img/" />
+          <img class="footer__image" src="assets/img/tsi_horizontal" />
         </a>
       </div>
-        </div>
+	    <!-- No quites esto  -->
+      <hr class="footer__line" />
+      <p class="info">Creada por Jesús Rios Alzamora </p>
+    </div>
   </footer>
+    
 
 	 
   <!-- Scripts -->
