--- a/index.html
+++ b/index.html
@@ -232,29 +232,7 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 80%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxH8Ss9ec&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
-</div></p>
-	 
-	</div></p>
-	  
-	 <h2 id="a8">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
-      <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la <b>fecha 14/09/2023</b> .<br>
-<b>Fecha de la visita:</b> 16/09/2023 <br>
-logrando contactar con el encargado del área de marketing Edil Campos .
-<b>Resultado de contacto:</b> <br>
-Se logro obtener cierta  información esto debido algunos temas de tiempo por parte del encargado y cierta desconfianza.<br>
-<b>Información obtenida:</b> <br>
--Breve información de la empresa<br>
--Áreas de la empresa y Organigrama<br>
--Proceso de producción y algunas fotos de las áreas.<br>
-     
-<b>Observaciones: </b><br>
--No se tenia mucha noción sobre las labores de los trabajadores en cada área ni los nombres de cada uno.<br>
--No existía un organigrama establecido porque según se están organizando aun, pero indicamos uno aproximado.<br>
--No tenían visión, misión y valores los creamos a partir de lo comentado por parte del encargado el cual tenia una idea.<br>
--Los trabajadores son algo reacios a contestar por el momento.<br>
--El proceso logístico no fue detallado y fue algo impreciso, pero dimos sugerencias para su mejora<br>
-	      <img  height="400" width="700" class="" src="assets/img/AREAS-PRODU.JPG">
-</div></p>
+</div></p></div>
 
 
    <h2 id="a9">PRODUCTOS</h2>
